--- a/main.ipynb
+++ b/main.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
    "source": [
     "inputs = df[[\"YearsExperience\"]]\n",
     "targets = df.Salary\n",
-    "print(input.shape)\n",
+    "print(inputs.shape)\n",
     "print(targets.shape)"
    ]
   },
